fixed noise overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -428,21 +428,8 @@ h5 {
 
 /* BACKGROUND */
 
-.noise-messy {
-  display: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  background: url("/images/site/noise.svg");
-  filter: contrast(100%) brightness(100%);
-}
-
-.noise-neat {
-  display: fixed;
-  top: 0;
-  left: 0;
-  height: auto;
+.noise {
+  min-height: 100vh;
   width: 100vw;
   background: url("/images/site/noise.svg");
   filter: contrast(100%) brightness(100%);
